--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,52 +1,44 @@
 name: social
 description: "social App"
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.4 <4.0.0'
-
+  sdk: ">=3.3.4 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-
 
   cupertino_icons: ^1.0.8
   sqflite: ^2.3.3+1
   intl: ^0.19.0
   conditional_builder_null_safety: ^0.0.6
   bloc: ^8.1.4
-  flutter_bloc: ^8.1.5
+  flutter_bloc: ^8.1.6
   hexcolor: ^3.0.1
-  shared_preferences: ^2.2.3
+  shared_preferences: ^2.3.2
 
-
-  fluttertoast: ^8.2.6
-  carousel_slider: ^4.2.1
+  fluttertoast: ^8.2.8
+  carousel_slider: ^5.0.0
   image_picker: ^1.1.2
 
   #firebase
-  firebase_core: ^3.0.0
-  firebase_auth: ^5.0.0
-  cloud_firestore: ^5.0.0
-  firebase_storage: ^12.0.0
-  firebase_messaging: ^15.0.0
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
+  cloud_firestore: ^5.4.4
+  firebase_storage: ^12.3.2
+  firebase_messaging: ^15.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-
   flutter_lints: ^4.0.0
 
-
 flutter:
-
-
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
@@ -65,8 +57,6 @@ flutter:
       fonts:
         - asset: assets/fonts/icons.ttf
 
-
-
   # fonts:
   #   - family: Schyler
   #     fonts:
@@ -79,5 +69,3 @@ flutter:
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
-
-
